src/display/styles.css
body {
    box-sizing: border-box;
    background-color: rgb(3, 3, 133);
    font-family: 'Impact', sans-serif;
    margin: 0%;
}

.title, .input {
    justify-self: center;
    font-size: 3em;
    color: rgb(172, 172, 172);
}

h1 {
    margin: 15px;
    margin-bottom: 5px;
}

#startBtn {
    height: 2rem;
    font-size: 1rem;
    font-weight: bolder;
    border-radius: 15px;
    border: none;
}

#name {
    color: black;
    font-size: 1.5rem;
    height: 2.5rem;
    border-radius: 15px;
    text-align: center;
    border: none;
}

#name:focus {
    border: 1px solid lightgrey;
    outline: none;
    box-shadow: inset 5px lightgray;

}

#form {
    display: grid;
    grid-template-columns: 1fr;
    width: 40%;
    justify-content: center;
    gap: 1rem;
    justify-self: center;

}

#placementBoardContainer{
    border: 1px solid red;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    gap: 5px;
    width: 48%;
    justify-self: center;
    margin-bottom: 4rem;
}
.cell, .cpuCell {
    aspect-ratio: 1;
    background-color: rgb(172, 172, 172);
}

#gameDisplay {
    display: none;
    border: 1px solid red;
    gap: 10px;
    padding-left: 10%;
    padding-right: 10%;
    margin: 0px;
    height: min-content;
}

#shipMessage {
    justify-self: center;
    color: rgb(172, 172, 172);
    font-size: 2.5rem;
}

#axisBtn {
    width: 40vh;
    justify-self: center;
    height: 2.5rem;
    font-size: 1rem;
    background-color: rgb(172, 172, 172);
    border: none;
    border-radius: 15px;
}

#playerBoardContainer {

    border: 3px solid green;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    gap: 3px;
    grid-column: 1 / 2;
    grid-row: 1 / 2;
}

#cpuBoardContainer {

    border: 3px solid blue;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    gap: 3px;
    grid-column: 2 / 3;
}

.cell--hit::after {
    content: '✕';
    color: red;
}

.cell--miss::after {
    content: '○';
    color: white;
}

.cell--carrier {
    background-color: rgb(255, 0, 0, .7);
}

.cell--battleship {
    background-color: rgb(255, 165, 0, .7);
}

.cell--cruiser {
    background-color: rgb(255, 255, 0, .7);
}

.cell--sub {
    background-color: rgb(0, 128, 0, .7);
}

.cell--destroyer {
    background-color: rgb(0, 0, 255, .7);
}

